Sun Aug  3 23:52:14 BST 2003  Colin Watson  <cjwatson@debian.org>

	infd and outfd should now only be set by pipeline_start(). Positive
	values in want_in and want_out now indicate caller-supplied file
	descriptors, while negative values indicate a request for
	pipeline_start() to create a pipe.

	* lib/pipeline.h (struct pipeline): Document this.
	* lib/pipeline.c (pipeline_start): Implement it. Caller-supplied
	  input and output file descriptors previously didn't work properly.
	  (pipeline_wait): Update TODO comment.

Sun Aug  3 21:07:46 BST 2003  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.h (struct command): New 'nice' member.
	* lib/pipeline.c (command_new): Initialize nice.
	  (pipeline_start): Change child process priority if nice is set.

Sun Aug  3 20:50:35 BST 2003  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_start): Pop all cleanups in child.

Sun Aug  3 20:47:24 BST 2003  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (argstr_get_word, command_new_argstr,
	  command_argstr, pipeline_command_argstr): New functions to handle
	  constructing commands from shell-quoted strings, such as those
	  found in man-db configuration files. They deliberately handle only
	  a safe subset of shell syntax.
	* lib/pipeline.h: Prototype command_new_argstr(), command_argstr(),
	  and pipeline_command_argstr().

Sun Aug  3 19:09:59 BST 2003  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (command_dup): New function to duplicate a command.
	  (pipeline_join): New function to join two pipelines together.
	* lib/pipeline.h: Prototype these.

Sun Aug  3 18:00:59 BST 2003  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.h (struct pipeline): The writeto, readfrom, writefd,
	  and readfd names turn out to be confusing in calling code. Rename
	  to want_in, want_out, infd, and outfd respectively.
	* lib/pipeline.c (pipeline_new, pipeline_start, pipeline_wait): Use
	  new names.
