@@ -1,3 +1,8 @@
+Sun Aug  3 23:59:18 BST 2003  Colin Watson  <cjwatson@debian.org>
+
+	* lib/pipeline.c (pipeline_start): Use dup2() instead of close()
+	  then dup().
+
 Sun Aug  3 23:52:14 BST 2003  Colin Watson  <cjwatson@debian.org>
 
 	infd and outfd should now only be set by pipeline_start(). Positive
